--- a/conf/application.conf
+++ b/conf/application.conf
@@ -356,3 +356,11 @@ db {
 slick.dbs.default.driver="slick.driver.H2Driver$"
 slick.dbs.default.db.driver="org.h2.Driver"
 slick.dbs.default.db.url="jdbc:h2:mem:play"
+
+pontus {
+  spark.master.develop="spark://192.168.6.52:13328"
+  spark.master.local="local[2]"
+}
+
+play.modules.enabled += "play.modules.io.joaovasques.playspark.PlaySparkModule"
+
