--- a/conf/application.conf
+++ b/conf/application.conf
@@ -360,7 +360,8 @@ slick.dbs.default.db.url="jdbc:h2:mem:play"
 pontus {
   spark.master.develop="spark://192.168.6.52:13328"
   spark.master.local="local[2]"
+  spark.mesos.host="mesos://192.168.6.52:5050"
 }
 
-play.modules.enabled += "play.modules.io.joaovasques.playspark.PlaySparkModule"
+#play.modules.enabled += "play.modules.io.joaovasques.playspark.PlaySparkModule"
 
