--- a/conf/application.conf
+++ b/conf/application.conf
@@ -361,6 +361,7 @@ pontus {
   spark.master.develop="spark://192.168.6.52:13328"
   spark.master.local="local[2]"
   spark.mesos.host="mesos://192.168.6.52:5050"
+  spark.lib.path="/home/qihuang.zheng/first-player-1.0-SNAPSHOT/lib/first-player.first-player-1.0-SNAPSHOT-sans-externalized.jar"
 }
 
 #play.modules.enabled += "play.modules.io.joaovasques.playspark.PlaySparkModule"
